# cmakepackagetest

./: CMakeLists.txt  CMakePresets.json  main.cpp
libs/priva/: CMakeLists.txt  priva.cpp  priva.h
libs/puba/: CMakeLists.txt  puba.cpp  puba.h
libs/pubb/: CMakeLists.txt  CMakePresets.json  Config.cmake.in  pubb.cpp  pubb.h
